--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-dept-editInfo.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-dept-editInfo.vm
@@ -103,13 +103,14 @@
 				</table>
 			#end
 			
+			## Department Name (added from chef_users_edit.vm) ##
 			## Title ##
 			<div class="mb-3 row">
 				<label for="title" class="col-sm-2 col-form-label">
 					#if ($siteTitleEditable || (!$!existingSite && !$hasRosterAttached))
 						<span class="reqStar">*</span>
 					#end
-					$tlang.getString("schooldiinf.sittit")
+					Department Name
 				</label>
 				<div class="col-sm-4">
 					#if ($siteTitleEditable || (!$!existingSite && !$hasRosterAttached))
@@ -119,198 +120,66 @@
 					#end
 				</div>
 			</div>
-			
-			<input type="hidden" name="hasRosterAttached" id="hasRosterAttached" value="$hasRosterAttached" />
-			
-			#if (!$!existingSite)
-				## creating new sites
-				#if ($displaySiteAlias && $!site_alias_assignable)
-					<div class="mb-3 row">
-						<label for="alias_0" class="col-sm-2 col-form-label">
-							$tlang.getString("sinfo.url")
-						</label>
-						<div class="col-sm-4">
-							$!form_site_url_base<input type="text" name="alias_0" id="alias_0" maxlength="40" size="20" value="$formattedText.escapeHtml($form_site_alias)" class="form-control sakai-glow" />
-						</div>
-					</div>
-					<input type="hidden" name="alias_count" id="alias_count" value="1" />
-				#else
-					<input type="hidden" name="alias_count" id="alias_count" value="0" />
-				#end
-			#else
-				## editing exist site
-				#set ( $aliasIdx = 0 )
-				#foreach ($siteAlias in $site_aliases)
-					<div class="mb-3 row">
-						#if ( $!site_aliases_editable )
-							<label for="alias_$aliasIdx" class="col-sm-2 col-form-label">
-								$tlang.getString("sitediinf.editurl")
-							</label>
-							<div class="col-sm-4">
-								$!site_url_base<input type="text" name="alias_$aliasIdx" id="alias_$aliasIdx" maxlength="40" size="20" value="$formattedText.escapeHtml($!siteAlias)" class="form-control sakai-glow" />
-							</div>
-						#else
-							<label for="alias_$aliasIdx" class="col-sm-2 col-form-label">
-								$tlang.getString("sinfo.url")
-							</label>
-							<div class="col-sm-4">
-								$!site_url_base$formattedText.escapeHtml($!siteAlias)
-								<input type="hidden" name="alias_$aliasIdx" id="alias_$aliasIdx" value="$formattedText.escapeHtml($!siteAlias)" />
-							</div>
-						#end
-						#set ( $aliasIdx = $aliasIdx + 1 )
-					</div>
-				#end
-				#if ( $!site_aliases_editable )
-					<div class="mb-3 row">
-						<label for="alias_$aliasIdx" class="col-sm-2 col-form-label">
-							$tlang.getString("sitediinf.addurl")
-						</label>
-						<div class="col-sm-4">
-							$!site_url_base<input type="text" name="alias_$aliasIdx" id="alias_$aliasIdx" maxlength="40" size="20" value="" class="form-control sakai-glow" />
-						</div>
-					</div>
-					#set ( $aliasIdx = $aliasIdx + 1 )
-				#end
-				<input type="hidden" name="alias_count" id="alias_count" value="$aliasIdx" />
-			#end
-			
-			## Term ##
-			#if ($!isCourseSite)
-				<div class="mb-3 row">
-					<label for="term" class="col-sm-2 col-form-label">
-						$tlang.getString("sitediinf.term")
-					</label>
-					<div class="col-sm-4">
-						$!selectedTerm
-					</div>
-				</div>	
-			#end
-			
-			<!-- Address -->
-			<div class="mb-3 row">
-				<label for="devtek-site-address" class="col-sm-2 col-form-label">
-					<span class="reqStar">*</span> $tlang.getString("school.address")
-				</label>
-				<div class="col-sm-4">
-					<input type="text" name="devtek-site-address" id="devtek-site-address" size="40" maxlength="255" value="$!validator.escapeHtml($!devtek-site-address)" class="form-control sakai-glow" form_requiredFields />
-				</div>
-			</div>
 
-			<!-- City -->
-			<div class="mb-3 row">
-				<label for="devtek-site-city" class="col-sm-2 col-form-label">
-					<span class="reqStar">*</span> $tlang.getString("school.city")
-				</label>
-				<div class="col-sm-4">
-					<input type="text" name="devtek-site-city" id="devtek-site-city" size="40" maxlength="255" value="$!validator.escapeHtml($!devtek-site-city)" class="form-control sakai-glow" form_requiredFields/>
-				</div>
-			</div>
-
-			<!-- Zip Code -->
-			<div class="mb-3 row">
-				<label for="devtek-site-zipcode" class="col-sm-2 col-form-label">
-					<span class="reqStar">*</span> $tlang.getString("school.zip")
-				</label>
-				<div class="col-sm-4">
-					<input type="text" name="devtek-site-zipcode" id="devtek-site-zipcode" size="40" maxlength="10" value="$!validator.escapeHtml($!devtek-site-zipcode)" class="form-control sakai-glow" required/>
-				</div>
-			</div>
-
-			<!-- State -->
-			<div class="mb-3 row">
-				<label for="devtek-site-state" class="col-sm-2 col-form-label">
-					<span class="reqStar">*</span> $tlang.getString("school.state")
-				</label>
-				<div class="col-sm-4">
-					<select name="devtek-site-state" id="devtek-site-state" class="form-control sakai-glow" required="required" aria-required="true">
-						<option value="">-- Select State --</option>
-						<option value="CA" #if($devtek-site-state == "CA") selected="selected" #end>California</option>
-						<option value="NY" #if($devtek-site-state == "NY") selected="selected" #end>New York</option>
-						<option value="TX" #if($devtek-site-state == "TX") selected="selected" #end>Texas</option>
-						<option value="FL" #if($devtek-site-state == "FL") selected="selected" #end>Florida</option>
-						<option value="IL" #if($devtek-site-state == "IL") selected="selected" #end>Illinois</option>
-						<option value="PA" #if($devtek-site-state == "PA") selected="selected" #end>Pennsylvania</option>
-						<option value="OH" #if($devtek-site-state == "OH") selected="selected" #end>Ohio</option>
-						<option value="GA" #if($devtek-site-state == "GA") selected="selected" #end>Georgia</option>
-						<option value="NC" #if($devtek-site-state == "NC") selected="selected" #end>North Carolina</option>
-						<option value="MI" #if($devtek-site-state == "MI") selected="selected" #end>Michigan</option>
-					</select>
-				</div>
-			</div>
-			
-			<!-- Language -->
+			<!-- Parent Department -->
 			<div class="mb-3 row">
 				<label for="locales" class="col-sm-2 col-form-label">
-					$tlang.getString("sinfo.language")
+					Parent Department
 				</label>
 				<div class="col-sm-4">
 					<select name="locales" id="locales" class="form-control sakai-glow">
-						<option value="" #if ($locale_string == "")selected="true" #end>$tlang.getString("sinfo.language.defaultUserLanguage")</option>			
-						#foreach($locale in $locales)			
-							<option value="$locale.toString()" #if ($locale.toString() == $locale_string)selected="true" #end>$formattedText.escapeHtml($tlang.getLocaleDisplayName($locale))</option>	
-						#end			
+						<option value="" #if ($locale_string == "")selected="true" #end>$tlang.getString("sinfo.language.defaultUserLanguage")</option>
+						#foreach($locale in $locales)
+							<option value="$locale.toString()" #if ($locale.toString() == $locale_string)selected="true" #end>$formattedText.escapeHtml($tlang.getLocaleDisplayName($locale))</option>
+						#end
 					</select>
 				</div>
 			</div>
 
-			## Short Description ##
+			<!-- Language -->
 			<div class="mb-3 row">
-				<label for="short_description" class="col-sm-2 col-form-label">
-					$tlang.getString("sitediinf.shodes") 
-					<span class="textPanelFooter d-block">
-						$tlang.getString("schooldiinf.dis2")
-					</span>
+				<label for="locales" class="col-sm-2 col-form-label">
+					Department Admin
 				</label>
 				<div class="col-sm-4">
-					<textarea name="short_description" id="short_description" rows="2" class="form-control sakai-glow" maxlength="80">$validator.escapeHtmlTextarea($!short_description)</textarea>
+					<select name="locales" id="locales" class="form-control sakai-glow">
+						<option value="" #if ($locale_string == "")selected="true" #end>$tlang.getString("sinfo.language.defaultUserLanguage")</option>
+						#foreach($locale in $locales)
+							<option value="$locale.toString()" #if ($locale.toString() == $locale_string)selected="true" #end>$formattedText.escapeHtml($tlang.getLocaleDisplayName($locale))</option>
+						#end
+					</select>
 				</div>
-			</div>	
+			</div>
+
+
 			
-			## Description ##
-			<div class="mb-3 row">
-				<label for="description" class="col-sm-2 col-form-label">
-					$tlang.getString("sitediinf.des")
-					<span class="textPanelFooter d-block">
-						$tlang.getString("schooldiinf.dis")
-					</span>
+			<input type="hidden" name="hasRosterAttached" id="hasRosterAttached" value="$hasRosterAttached" />
+			
+			
+			## Contact Name ##
+			<div class="row d-none">
+				<label for="siteContactName" class="col-sm-2 form-control-label d-none">
+					<span class="reqStar">*</span>
+					$tlang.getString("sitediinf.sitconnam")
 				</label>
 				<div class="col-sm-4">
-					<table border="0" cellpadding="0" cellspacing="0" >
-						<tr>
-							<td>
-								<textarea name="description" id="description" cols="65" rows="30" wrap="virtual" class="form-control sakai-glow">$formattedText.escapeHtmlFormattedTextarea($!description)</textarea>
-								#chef_setupformattedtextarea("description")
-							</td>
-						</tr>
-					</table>	
-				</div>	
+					<input type="text" name="siteContactName" id="siteContactName" size="20" maxlength="99" value="$!validator.escapeHtml($!form_site_contact_name)" />
+				</div>
+			</div>		
+			## Contact Email ##		
+			<div class="row d-none">
+				<label for="siteContactEmail" class="col-sm-2 form-control-label d-none">
+					$tlang.getString("sitediinf.sitconema")
+				</label>	
+				<div class="col-sm-4">			
+					<input type="text" name="siteContactEmail" id="siteContactEmail" size="20" maxlength="99" value="$!form_site_contact_email" />
+				</div>
 			</div>
-			
-	## Contact Name ##
-		<div class="row  d-none">
-			<label for="siteContactName" class="col-sm-2 form-control-label">
-                <span class="reqStar">*</span>
-				$tlang.getString("sitediinf.sitconnam")
-			</label>
-			<div class="col-sm-4">
-				<input type="text" name="siteContactName" id="siteContactName" size="20" maxlength="99" value="$!validator.escapeHtml($!form_site_contact_name)" />
-			</div>
-		</div>		
-		## Contact Email ##		
-		<div class="row  d-none">
-			<label for="siteContactEmail" class="col-sm-2 form-control-label">
-				$tlang.getString("sitediinf.sitconema")
-			</label>	
-			<div class="col-sm-4">			
-				<input type="text" name="siteContactEmail" id="siteContactEmail" size="20" maxlength="99" value="$!form_site_contact_email" />
-			</div>
-		</div>
-		#if ($isMathJaxInstalled)
-			#if ($isMathJaxEnabledForSite)
-				<input type="hidden" name="isMathJaxEnabledForSite" id="isMathJaxEnabledForSite" value="on"/>
+			#if ($isMathJaxInstalled)
+				#if ($isMathJaxEnabledForSite)
+					<input type="hidden" name="isMathJaxEnabledForSite" id="isMathJaxEnabledForSite" value="on"/>
+				#end
 			#end
-		#end
 			<input type="hidden" name="back" value="$!backIndex" />
 			<input type="hidden" name="templateIndex" value="$!templateIndex" />
 			<input type="hidden" name="continue" value="$!continue" />
@@ -330,4 +199,5 @@
 			</div>
 			<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 		</fieldset>
+	</form>
 </div>
